--- a/HelloWinForms/packages.config
+++ b/HelloWinForms/packages.config
@@ -19,9 +19,11 @@
   <package id="Serilog.Sinks.Console" version="5.0.1" targetFramework="net48" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.CodeDom" version="8.0.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="7.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
   <package id="System.Drawing.Common" version="7.0.0" targetFramework="net48" />
+  <package id="System.Management" version="8.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="7.0.0" targetFramework="net48" />
