--- a/HelloWinForms/HelloWinForms.csproj
+++ b/HelloWinForms/HelloWinForms.csproj
@@ -177,12 +177,6 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5cded1a1a0a7b481, processorArchitecture=MSIL">
-      <HintPath>..\packages\DockPanelSuite.3.1.0\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
-    </Reference>
-    <Reference Include="WeifenLuo.WinFormsUI.Docking.ThemeVS2015, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5cded1a1a0a7b481, processorArchitecture=MSIL">
-      <HintPath>..\packages\DockPanelSuite.ThemeVS2015.3.1.0\lib\net40\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="YamlDotNet, Version=13.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
       <HintPath>..\packages\YamlDotNet.13.7.1\lib\net47\YamlDotNet.dll</HintPath>
@@ -266,12 +260,6 @@
     </Compile>
     <Compile Include="Dialogs\ProgressDialog.Designer.cs">
       <DependentUpon>ProgressDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HelloAsync.cs">
       <SubType>Form</SubType>
@@ -362,6 +350,12 @@
     </Compile>
     <Compile Include="HelloEncoding.Designer.cs">
       <DependentUpon>HelloEncoding.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloEquals.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloEquals.Designer.cs">
+      <DependentUpon>HelloEquals.cs</DependentUpon>
     </Compile>
     <Compile Include="HelloExeInForm.cs">
       <SubType>Form</SubType>
@@ -621,6 +615,7 @@
     <Compile Include="Protocols\ModbusPoint.cs" />
     <Compile Include="Protocols\ModbusTcpClient.cs" />
     <Compile Include="Protocols\PointItem.cs" />
+    <Compile Include="Protocols\ProtocolSimpleJson.cs" />
     <Compile Include="SharedMemory\HelloSharedMemory.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -707,12 +702,6 @@
     <Compile Include="HelloDragDrop.Designer.cs">
       <DependentUpon>HelloDragDrop.cs</DependentUpon>
     </Compile>
-    <Compile Include="HelloToolBarPanel.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="HelloToolBarPanel.Designer.cs">
-      <DependentUpon>HelloToolBarPanel.cs</DependentUpon>
-    </Compile>
     <Compile Include="HelloToolStrip.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -744,12 +733,6 @@
     <Compile Include="Utilities\LogHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NewDockContent.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NewDockContent.Designer.cs">
-      <DependentUpon>NewDockContent.cs</DependentUpon>
-    </Compile>
     <Compile Include="UserControl1.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -785,9 +768,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\PagerControl.resx">
       <DependentUpon>PagerControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HelloAsync.resx">
       <DependentUpon>HelloAsync.cs</DependentUpon>
@@ -833,6 +813,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HelloEncoding.resx">
       <DependentUpon>HelloEncoding.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloEquals.resx">
+      <DependentUpon>HelloEquals.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HelloExeInForm.resx">
       <DependentUpon>HelloExeInForm.cs</DependentUpon>
@@ -966,9 +949,6 @@
     <EmbeddedResource Include="HelloTimer.resx">
       <DependentUpon>HelloTimer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HelloToolBarPanel.resx">
-      <DependentUpon>HelloToolBarPanel.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="HelloToolStrip.resx">
       <DependentUpon>HelloToolStrip.cs</DependentUpon>
     </EmbeddedResource>
@@ -1025,9 +1005,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="NewDockContent.resx">
-      <DependentUpon>NewDockContent.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </EmbeddedResource>
