--- a/HelloWinForms/packages.config
+++ b/HelloWinForms/packages.config
@@ -2,12 +2,17 @@
 <packages>
   <package id="DockPanelSuite" version="3.1.0" targetFramework="net48" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.1.0" targetFramework="net48" />
+  <package id="EPPlus" version="7.5.1" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="7.5.0" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="7.5.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.4" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NModbus" version="3.0.81" targetFramework="net48" />
   <package id="NModbus.Serial" version="3.0.81" targetFramework="net48" />
@@ -21,14 +26,18 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.CodeDom" version="8.0.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="7.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
-  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="8.0.4" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.0" targetFramework="net48" />
   <package id="System.Management" version="8.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="7.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="YamlDotNet" version="13.7.1" targetFramework="net48" />
