--- a/HelloWinForms/HelloWinForms.csproj
+++ b/HelloWinForms/HelloWinForms.csproj
@@ -36,7 +36,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\Deploy\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -46,7 +46,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Deploy\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -72,9 +72,6 @@
     </Reference>
     <Reference Include="hdevenginedotnetxl">
       <HintPath>..\DLL\halcon\hdevenginedotnetxl.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.9.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis, Version=4.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeAnalysis.Common.4.8.0\lib\netstandard2.0\Microsoft.CodeAnalysis.dll</HintPath>
@@ -148,9 +145,6 @@
     </Reference>
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.IO.Pipelines, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.IO.Pipelines.9.0.0\lib\net462\System.IO.Pipelines.dll</HintPath>
-    </Reference>
     <Reference Include="System.Management" />
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
@@ -385,12 +379,6 @@
     </Compile>
     <Compile Include="HelloExeInForm.Designer.cs">
       <DependentUpon>HelloExeInForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="HelloHalconOpenCV.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="HelloHalconOpenCV.Designer.cs">
-      <DependentUpon>HelloHalconOpenCV.cs</DependentUpon>
     </Compile>
     <Compile Include="HelloHttpClient.cs">
       <SubType>Form</SubType>
@@ -871,9 +859,6 @@
     <EmbeddedResource Include="HelloExeInForm.resx">
       <DependentUpon>HelloExeInForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HelloHalconOpenCV.resx">
-      <DependentUpon>HelloHalconOpenCV.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="HelloHttpClient.resx">
       <DependentUpon>HelloHttpClient.cs</DependentUpon>
     </EmbeddedResource>
@@ -1048,7 +1033,6 @@
     <EmbeddedResource Include="MouseDrawRectangleForm3.resx">
       <DependentUpon>MouseDrawRectangleForm3.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
